# mcp-tool-server

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  IMPORT_STRUCTURE.md  LM_STUDIO_SETUP.md  POSTMAN.md  POSTMAN_AUTOMATION.md  QUICK_START.md  QUICK_START_LM_STUDIO.md  README.md  TESTING.md  claude.md  debug_tool.py  postman_collection.json  postman_environment.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_client.py
.forgejo/workflows/: ci-cd.yaml
.github/workflows/: codeql.yml
build-image/: Dockerfile  pyproject.toml
src/: __init__.py  __main__.py  main.py  main_http.py  main_sse.py  mcp.py  server.py
src/core/: __init__.py  config.py  logging.py
src/prompts/: __init__.py  api_design.py  architecture.py  code_explainer.py  code_generator.py  code_review.py  debugging.py  documentation.py  performance.py  refactoring.py  security_audit.py  sql_query.py  test_generator.py
src/tools/: __init__.py  http_tools.py  ollama_tools.py  prompt.py  registry.py  time.py  time_tools.py  weather_tools.py  web_tools.py
src/utils/: http_client.py  rate_limiter.py  search_providers.py  web_fetcher.py
tests/: test_all_tools.py  test_tools.py  test_tools_unit.py
