[project]
name = "mcp-tools-server"
version = "0.1.0"
description = "MCP Server with various tools for LLM"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "fastmcp>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
mcp-server = "src.main:server_main.run"

[tool.setuptools]
packages = ["src", "src.core", "src.tools", "src.utils"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
